--- a/site css/site_CV.css
+++ b/site css/site_CV.css
@@ -61,9 +61,12 @@ a:hover {
   color: rgb(255, 248, 155);
   font-weight: bolder;
 }
-.link {
+footer
+ {
+  text-align: center;
   border: 3px rgb(126, 126, 197) solid;
   border-radius: 6px;
   box-shadow: 3px 3px 10px;
-  width: 11%;
+  width: 300px;
+  margin: auto;
 }
