--- a/site_CV.css
+++ b/site_CV.css
@@ -2,7 +2,7 @@ html {
   font-family: Arial, Helvetica, sans-serif;
   text-align: justify;
   /*test background (pas ouf avec les couleurs de font)*/
-  background-image: url("../image/background_flat.png");
+  background-image: url("image/background_flat.png");
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
