--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,6 +67,7 @@ opacity: 0.9;
 .grid
 {
     display: flex;
+    
     justify-content:space-around;
   
    
@@ -80,6 +81,8 @@ opacity: 0.9;
     box-shadow: 0px 0px 20px;
     width: 300px;
     height: 300px;
+    text-align: left;
+    text-justify: auto;
     
     
 }
@@ -91,6 +94,8 @@ opacity: 0.9;
     box-shadow: 0px 0px 20px;
     width: 300px;
     height: 300px;
+    text-align: left;
+    text-justify: auto;
     
     
 }
@@ -145,6 +150,11 @@ a:hover
     text-decoration: underline;
     color: rgb(255, 248, 155);
     font-weight: bolder;
+}
+.link
+{
+    width: 40px;
+    height: 40px;
 }
 
 
