--- a/CSS/style.css
+++ b/CSS/style.css
@@ -68,9 +68,7 @@ opacity: 0.9;
 {
     display: flex;
     
-    justify-content:space-around;
-  
-   
+    justify-content: center;
     
 }
 .hardware
@@ -81,6 +79,7 @@ opacity: 0.9;
     box-shadow: 0px 0px 20px;
     width: 300px;
     height: 300px;
+   
     text-align: left;
     text-justify: auto;
     
@@ -94,6 +93,8 @@ opacity: 0.9;
     box-shadow: 0px 0px 20px;
     width: 300px;
     height: 300px;
+    margin-left: 30px;
+    
     text-align: left;
     text-justify: auto;
     
@@ -109,6 +110,7 @@ opacity: 0.9;
     height: 300px;
     width: 300px;
     margin: auto;
+    margin-top: 30px;
 }
 .headingsmash
 {
