--- a/CSS/style.css
+++ b/CSS/style.css
@@ -74,9 +74,9 @@ opacity: 0.9;
 .hardware
 {
     padding: 10px;
-    border: 3px rgb(126, 126, 197) solid;
-    border-radius: 6px;
-    box-shadow: 0px 0px 20px;
+    border: 5px rgb(126, 126, 197) solid;
+    border-radius: 15px;
+    box-shadow: 0px 0px 50px;
     width: 300px;
     height: 300px;
    
@@ -88,9 +88,9 @@ opacity: 0.9;
 .software
 {
     padding: 10px;
-    border: 3px rgb(126, 126, 197) solid;
-    border-radius: 6px;
-    box-shadow: 0px 0px 20px;
+    border: 5px rgb(126, 126, 197) solid;
+    border-radius: 15px;
+    box-shadow: 0px 0px 50px;
     width: 300px;
     height: 300px;
     margin-left: 30px;
@@ -104,9 +104,9 @@ opacity: 0.9;
 .smash
 {
     padding: 10px;
-    border: 3px rgb(236, 238, 111) solid;
-    border-radius: 6px;
-    box-shadow: 0px 0px 20px rgb(236, 238, 111);
+    border: 5px rgb(236, 238, 111) solid;
+    border-radius: 200px;
+    box-shadow: 0px 0px 50px rgb(236, 238, 111);
     height: 300px;
     width: 300px;
     margin: auto;
@@ -114,6 +114,7 @@ opacity: 0.9;
 }
 .headingsmash
 {
+    
     text-align: center;
     color: rgb(185, 209, 47);
     font-size: 1.5em;
@@ -133,11 +134,13 @@ opacity: 0.9;
 /* footer */
 footer
 {
+    padding-top: 4px;
     text-align: center;
     border: 3px rgb(126, 126, 197) solid;
-    border-radius: 6px;
-    box-shadow: 3px 3px 10px;
-    width: 300px;
+    border-radius: 40px;
+    box-shadow: 0px 0px 10px;
+    
+    width: 120px;
     margin: auto;
     font-weight: bold;
     font-size: 1em;
