--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,9 @@
 /* general */
-html
+/*html
 {
     background-image:url(../image/background_bureau.jpg) ;
     background-repeat: no-repeat;
-}
+}*/
 body
 {
 font-family: Arial, Helvetica, sans-serif;
@@ -11,10 +11,12 @@ text-align: justify;
 /*background-color:  rgb(30, 30, 30);*/
 background-image:url(../image/gris.jpg);
 opacity: 0.9;
-
+margin-top: 12%;
+padding:auto;
 }
 .image {
     float: right;
+    max-height: 120px;
   }
 .heading
 {
@@ -39,20 +41,40 @@ opacity: 0.9;
 
 
 /* header */
+.nom,.dev
+{
+display: flex;
+justify-content: center;
+
+}
 .nom
 {
     text-align: left;
-    color: rgb(104, 151, 155);
+    color: rgb(118, 183, 189);
     font-weight: bold;
     font-size: 2.5em;
 }
 .dev
 {
     text-align: left;
-    color: rgb(104, 151, 155);
+    color: rgb(118, 183, 189);
     font-weight: bold;
     font-size: 1.5em;
+    align-self: center;
     
+    
+    
+}
+header
+{
+    background-image: url(/image/background_bureau.jpg);
+    background-position: 0px 800px;
+    background-size: 100%;
+    width: 100%;
+    height: 120px;
+    position:fixed;
+    top: 0px;
+
 }
 /* section experience */
 .experience
