--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,15 +1,11 @@
 /* general */
-/*html
-{
-    background-image:url(../image/background_bureau.jpg) ;
-    background-repeat: no-repeat;
-}*/
+
 body
 {
 font-family: Arial, Helvetica, sans-serif;
 text-align: justify;
-/*background-color:  rgb(30, 30, 30);*/
-background-image:url(../image/gris.jpg);
+background-color:  rgb(30, 30, 30);
+/*background-image:url(../image/gris.jpg);*/
 opacity: 0.9;
 margin-top: 12%;
 margin-left: 0%;
@@ -69,7 +65,7 @@ padding:auto;
 header
 {
     background-image: url(/image/background_bureau.jpg);
-    background-position: 0px 800px;
+    background-position: 0px 0px;
     background-size: 100%;
     width: 100%;
     height: 80px;
@@ -90,8 +86,9 @@ header
 .grid
 {
     display: flex;
-    
     justify-content: center;
+    
+    flex-wrap: wrap;
     
 }
 .hardware
@@ -155,19 +152,22 @@ header
 
 }
 /* footer */
-footer
+.reseaux
 {
     padding-top: 4px;
     text-align: center;
-    border: 3px rgb(126, 126, 197) solid;
+    border-left: 5px rgb(126, 126, 197) solid;
+    border-right: 5px rgb(126, 126, 197) solid;
+    border-top: 5px rgb(126, 126, 197) solid;
+    border-bottom: 5px rgb(126, 126, 197) solid;
     border-radius: 40px;
     box-shadow: 0px 0px 10px;
-    
-    width: 120px;
+    width: 200px;
     margin: auto;
-    font-weight: bold;
-    font-size: 1em;
     color: rgb(104, 151, 155);
+    position:fixed;
+    bottom: 1%;
+    right: -30px;
 }
 a 
 {
@@ -183,6 +183,12 @@ a:hover
 {
     width: 40px;
     height: 40px;
+}
+.copyright
+{
+    margin-top: 200px;
+    text-align: center;
+    color: rgb(255, 255, 255);
 }
 
 
