--- a/CSS/style.css
+++ b/CSS/style.css
@@ -163,21 +163,20 @@ header
     border-radius: 40px;
     box-shadow: 0px 0px 10px;
     width: 200px;
-    margin: auto;
     color: rgb(104, 151, 155);
     position:fixed;
     bottom: 1%;
     right: -30px;
 }
-a 
+/*a 
 {
     color: rgb(231, 75, 122);
-}
-a:hover 
+}*/
+a:hover img
 {
-    text-decoration: underline;
-    color: rgb(255, 248, 155);
-    font-weight: bolder;
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
+
 }
 .link
 {
@@ -190,6 +189,7 @@ a:hover
     text-align: center;
     color: rgb(255, 255, 255);
 }
+
 
 
 
