--- a/CSS/style.css
+++ b/CSS/style.css
@@ -192,8 +192,38 @@ a:hover img
 
 
 
-
-
-
-
-
+/** scrollbar **/
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #c966ff;
+  border: 0px none #ffffff;
+  border-radius: 42px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #ab54d9;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #772f98;
+}
+::-webkit-scrollbar-track {
+  background: #554e5a;
+  border: 0px none #ffffff;
+  border-radius: 25px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #554e5a;
+}
+::-webkit-scrollbar-track:active {
+  background: #554e5a;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+/** scrollbar **/
