--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,7 +58,7 @@ padding:auto;
     align-self: center;
     position: absolute;
     left: 40%;
-    top: x;
+    
     
     
 }
@@ -99,7 +99,6 @@ header
     box-shadow: 0px 0px 50px;
     width: 300px;
     height: 300px;
-   
     text-align: left;
     text-justify: auto;
     
@@ -114,7 +113,6 @@ header
     width: 300px;
     height: 300px;
     margin-left: 30px;
-    
     text-align: left;
     text-justify: auto;
     
@@ -168,10 +166,7 @@ header
     bottom: 1%;
     right: -30px;
 }
-/*a 
-{
-    color: rgb(231, 75, 122);
-}*/
+
 a:hover img
 {
     -webkit-transform: scale(1.3);
@@ -227,3 +222,145 @@ a:hover img
   background: transparent;
 }
 /** scrollbar **/
+
+@media screen and (max-width: 1280px)
+{
+/** header **/
+  .nom
+  {
+    text-align: left;
+    color: rgb(118, 183, 189);
+    font-weight: bold;
+    font-size: 2.5em;
+    position: absolute;
+    left:0%;
+    top: -17px;
+  }
+  .dev
+  {
+    display: flex;
+    text-align: left;
+    color: rgb(118, 183, 189);
+    font-weight: bold;
+    font-size: 1.5em;
+    align-self: left;
+    position: absolute;
+    left: 0%;
+    top: 25%;
+    
+  }
+  /** header **/
+
+
+  /** body **/
+  .software
+  {
+    padding: 10px;
+    height: 300px;
+    width: 300px;
+    margin: auto;
+    margin-top: 30px;
+  }
+  .hardware
+  {
+    padding: 10px;
+  
+    height: 300px;
+    width: 300px;
+    margin: auto;
+    margin-top: 30px;
+  }
+  /** body **/
+
+
+  /** footer **/
+  .copyright
+  {
+    margin-top: 200px;
+    text-align: start;
+    color: rgb(255, 255, 255);   
+  }
+  /** footer **/
+}
+
+@media screen and (max-width: 400px)
+{
+/** header **/
+  .nom
+  {
+    text-align: left;
+    color: rgb(118, 183, 189);
+    font-weight: bold;
+    font-size: 2.5em;
+    position: absolute;
+    left:0%;
+    top: -17px;
+  }
+  .dev
+  {
+    display: flex;
+    text-align: left;
+    color: rgb(118, 183, 189);
+    font-weight: bold;
+    font-size: 1.5em;
+    align-self: left;
+    position: absolute;
+    left: 0%;
+    top: 25%;
+    
+  }
+  /** header **/
+
+
+  /** body **/
+  .software
+  {
+    padding: 10px;
+    height: 300px;
+    width: 300px;
+    margin: auto;
+    margin-top: 30px;
+  }
+  .hardware
+  {
+    
+    padding-bottom: 40px;
+    height: 300px;
+    width: 300px;
+    margin: auto;
+    margin-top: 30px;
+  }
+  /** body **/
+
+
+  /** footer **/
+  .copyright
+  {
+    margin-top: 200px;
+    text-align: start;
+    color: rgb(255, 255, 255);   
+  }
+  .reseaux
+{
+    
+    padding-top: 4px;
+    text-align: center;
+    border-left: 5px rgb(126, 126, 197) solid;
+    border-right: 5px rgb(126, 126, 197) solid;
+    border-top: 5px rgb(126, 126, 197) solid;
+    border-bottom: 5px rgb(126, 126, 197) solid;
+    border-radius: 40px;
+    box-shadow: 0px 0px 10px;
+    width: 150px;
+    color: rgb(104, 151, 155);
+    position:fixed;
+    bottom: 1%;
+    right: -28px;
+}
+.link
+{
+    width: 30px;
+    height: 30px;
+}
+  /** footer **/
+}
