--- a/CSS/style.css
+++ b/CSS/style.css
@@ -253,6 +253,10 @@ a:hover img
 
 
   /** body **/
+  body
+{
+  margin-top: 80px;
+}
   .software
   {
     padding: 10px;
@@ -270,6 +274,17 @@ a:hover img
     margin: auto;
     margin-top: 30px;
   }
+  .smah
+  {
+    padding: 20px;
+    border: 5px rgb(236, 238, 111) solid;
+    border-radius: 200px;
+    box-shadow: 0px 0px 50px rgb(236, 238, 111);
+    height: 300px;
+    width: 300px;
+    margin: auto;
+    margin-top: 30px;
+}
   /** body **/
 
 
@@ -363,4 +378,8 @@ a:hover img
     height: 30px;
 }
   /** footer **/
+}
+@media screen and (max-width: 280px)
+{
+
 }
