--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,13 +5,13 @@ body
 font-family: Arial, Helvetica, sans-serif;
 text-align: justify;
 background-color:  rgb(30, 30, 30);
-/*background-image:url(../image/gris.jpg);*/
 opacity: 0.9;
 margin-top: 12%;
 margin-left: 0%;
 padding:auto;
 }
-.image {
+.image 
+  {
     float: right;
     max-height: 80px;
   }
